@@ -1,4 +1,4 @@
 #define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)"
-#define VERSION "0.90.01"
-#define YEARS   "2011"
+#define VERSION "0.90.02"
+#define YEARS   "2012"
 
