@@ -1,3 +1,9 @@
+oxref (0.90.02)
+
+  * Replaced for_each calls by range-based for-loops
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 09 Jan 2012 13:50:28 +0100
+
 oxref (0.90.01)
 
   * Replaced FnWrap* calls by lambda functions
